# SuboptimalSIPP

./: AA-SIPP(m).pro  CMakeLists.txt  README.md  SuboptimalSIPP.pro  aa_sipp.cpp  aa_sipp.h  config.cpp  config.h  constraints.cpp  constraints.h  gl_const.h  heuristic.h  main.cpp  map.cpp  mission.cpp  searchresult.h  structs.h  task.cpp  xmlLogger.cpp
